# LinkedInSelenium

./: .env  .gitignore  pyproject.toml
linkedin_selenium/: __init__.py
tests/: test_linkedin_browser.py
