[project]
name = "linkedin_selenium"
version = "1.0.0"
description = ""
authors = [
    {name = "DSNoNintendo",email = "darylkstronge@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.32.0,<5.0.0)",
    "seleniumbase (>=4.41.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
